--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,10 +18,12 @@
     "@mui/material": "^5.14.20",
     "@tanstack/react-query": "^5.14.0",
     "axios": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
